--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "simple-git": "^3.27.0"
   },
   "engines": {
