--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,7 @@
+options:
+  logging: CLOUD_LOGGING_AND_CLOUD_STORAGE
+  logs_bucket: "gs://flash-crawler-400019-build-logs"
+
 steps:
   - name: "gcr.io/cloud-builders/docker"
     args:
@@ -7,6 +11,8 @@ steps:
       - "--build-arg"
       - "GIT_PAT=$$GIT_PAT"
       - "."
+    secretEnv:
+      - "GIT_PAT"
 
 availableSecrets:
   secretManager:
