--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,5 +15,5 @@ steps:
 
 availableSecrets:
   secretManager:
-    - versionName: projects/flash-crawler-400019/secrets/GIT_PAT/versions/1
+    - versionName: projects/$PROJECT_ID/secrets/GIT_PAT/versions/latest
       env: "GIT_PAT"
