--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,12 +6,12 @@ steps:
     entrypoint: "bash"
     args:
       - "-c"
-      - "docker build -t gcr.io/flash-crawler-400019/autocommiter:v1.0.0 --build-arg GIT_PAT=$$GIT_PAT ."
+      - "docker build -t gcr.io/flash-crawler-400019/autocommiter:latest --build-arg GIT_PAT=$$GIT_PAT ."
     secretEnv: ["GIT_PAT"]
   - name: "gcr.io/cloud-builders/docker"
     args:
       - "push"
-      - "gcr.io/flash-crawler-400019/autocommiter:v1.0.0"
+      - "gcr.io/flash-crawler-400019/autocommiter:latest"
 
 availableSecrets:
   secretManager:
