--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "autoCommiter.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "deploy": "gcloud builds submit --config=cloudbuild.yaml . && gcloud run deploy autocommiter --image=gcr.io/flash-crawler-400019/autocommiter:latest --platform=managed --region=us-central1"
   },
   "author": "",
   "license": "ISC",
